--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 
 body, html {
+    background-color: rgb(245, 245, 245);
 }
 
 header {
@@ -37,17 +38,22 @@ header {
 }
 
 main {
-    background-color: lightgray; /* placeholder */
     margin-top: 78px;
 }
 
 .container {
     width: 95%;
     max-width: 1150px;
-    height: 250px; /* placeholder */
+    height: 100%;
     background-color: red; /* placeholder */
-    margin: 0 auto;
+    margin: 100px auto;
     border: 1px solid black; /* placeholder */
+}
+
+#nav-inner-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 footer {
@@ -59,25 +65,182 @@ footer {
 #main-boxes {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 99%;
     margin: 0 auto 4em;
-    background-color: green; /* placeholder */
-    height: 250px; /* placeholder */
+    height: 400px;
 }
 
-#nav-inner-container {
-    width: 100%;
+#main-boxes-main {
+    background-color: yellow; /* placeholder */
+    height: 100%;
+    width: 60%;
+    background-image: url("assets/asteroid\ main.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#main-boxes-secondary-container {
+    background-color: blue; /* placeholder */
+    height: 100%;
+    width: 39%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
-@media (max-width: 1000px) {
+.main-boxes-secondary {
+    background-color: cyan; /* placeholder */
+    height: 49%;
+    width: 100%;
+}
 
+.red-gradient {
+    background-image: linear-gradient(170deg, rgba(255, 0, 0, 0.753), rgba(255, 0, 0, 0.486), rgba(255, 0, 0, 0.089), rgba(255, 0, 0, 0));
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+#news-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.news-box {
+    border: 1px solid black; /* placeholder */
+    width: 25%;
+    height: 250px; /* placeholder */
+}
+
+#index-funding-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.index-funding-box {
+    border: 1px solid black; /* placeholder */
+    width: 25%;
+    height: 250px; /* placeholder */
+}
+
+.index-funding-box-last {
+    border: 1px solid black; /* placeholder */
+    width: 25%;
+    height: 250px; /* placeholder */
+}
+
+#category-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.category-box {
+    border: 1px solid black; /* placeholder */
+    width: 33%;
+    height: 400px; /* placeholder */
+}
+
+#deals-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.deals-box {
+    border: 1px solid black; /* placeholder */
+    width: 25%;
+    height: 250px; /* placeholder */
+}
+
+@media (max-width: 1100px) {
+    #main-boxes {
+        height: 325px;
+    }
+
+    #main-boxes-main {
+        background-size: cover;
+    }
+
+    .red-gradient {
+        width: 0%;
+        height: 0%;
+    }
+
+    .news-box {
+        width: 33%;
+    }
+
+    .index-funding-box {
+        width: 33%;
+    }
+
+    .index-funding-box-last {
+        position: absolute !important;
+        top: -9999px !important;
+        left: -9999px !important;
+    }
+
+    .category-box {
+        width: 50%;
+    }
+
+    .deals-box {
+        width: 33%;
+    }
 }
 
 @media (max-width: 700px) {
     #nav-inner-container {
         flex-direction: row-reverse;
         justify-content: flex-start;
+    }
+
+    #main-boxes {
+        flex-direction: column;
+        height: 500px;
+    }
+
+    #main-boxes-main {
+        height: 33%;
+        width: 100%;
+    }
+
+    #main-boxes-secondary-container {
+        height: 66%;
+        width: 100%;
+    }
+
+    .news-box {
+        width: 100%;
+        height: 100px; /* placeholder */
+    }
+
+    #index-funding-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .index-funding-box {
+        width: 100%;
+        height: 200px; /* placeholder */
+    }
+
+    .category-box {
+        width: 100%;
+    }
+
+    .deals-box {
+        width: 100%;
+        height: 100px; /* placeholder */
     }
 }
