--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header {
     top: 0;
     width: 100%;
     background-color: white;
+    z-index: 10;
 }
 
 #nav-container {
@@ -74,7 +75,7 @@ main {
 
 footer {
     background-color: black;
-    height: 250px; /* placeholder */
+    height: 250px;
     width: 100%;
 }
 
@@ -120,7 +121,6 @@ footer {
 }
 
 .main-boxes-secondary {
-    background-color: cyan; /* placeholder */
     height: 50%;
     width: 100%;
 }
@@ -186,15 +186,55 @@ footer {
 }
 
 .index-funding-box {
-    border: 1px solid black; /* placeholder */
+    border-bottom: 1px solid black; /* placeholder */
     width: 25%;
-    height: 250px; /* placeholder */
+    position: relative;
+    padding: 0 10px;
+    height: 250px;
 }
 
-.index-funding-box-last {
-    border: 1px solid black; /* placeholder */
-    width: 25%;
-    height: 250px; /* placeholder */
+.index-funding-box img {
+    width: 70px;
+    height: auto;
+    position: absolute;
+    top: 3%;
+    left: 7%;
+}
+
+.index-funding-heading {
+    background-color: rgb(247, 94, 34);
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.index-funding-heading h5 {
+    color: white;
+    font-weight: bolder;
+    padding-bottom: 5px;
+    margin-left: 6em;
+}
+
+.index-funding-cost {
+    background-color: rgb(255, 194, 170);
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.index-funding-pricetag {
+    color: black;
+    font-weight: bolder;
+    margin-left: 6em;
+}
+
+.index-funding-series {
+    color: gray;
+    font-style: italic;
+    font-size: 12px;
+    margin-left: 7.8em;
+    padding-bottom: 5px;
 }
 
 #category-container {
@@ -222,6 +262,7 @@ footer {
     width: 25%;
     height: 250px; /* placeholder */
 }
+
 
 
 @media (max-width: 1100px) {
@@ -312,7 +353,15 @@ footer {
 
     .index-funding-box {
         width: 100%;
-        height: 200px; /* placeholder */
+        height: 200px;
+        padding: 10px 0;
+    }
+
+    .index-funding-box img {
+        left: 2%;
+        top: 8%;
+        width: 60px;
+        height: auto;
     }
 
     .category-box {
@@ -333,4 +382,7 @@ footer {
         text-align: center;
     }
     
+    .index-funding-heading h5 {
+        margin-left: 6em;
+    }
 }
