--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,38 @@ main {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-left: 0.5em;
+}
+
+#nav-inner-container li {
+    margin-top: 1.4em;
+    font-size: 14px;
+}
+
+#nav-inner-container li a {
+    padding: 25px 15px;
+    color: rgb(156, 156, 156);
+    text-decoration: none;
+}
+
+#nav-inner-container li a:hover {
+    color: rgb(59, 59, 59);
+    font-weight: bold;
+}
+
+.fa-search {
+    cursor: pointer;
+    padding: 18px;
+    border-left: 1px solid rgb(202, 202, 202);
+    color: rgb(172, 172, 172);
+}
+
+.fa-bars {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+    cursor: pointer;
+    color: red;
 }
 
 footer {
@@ -114,6 +146,44 @@ footer {
     justify-content: space-between;
 }
 
+#main-box-heading {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 20px 0;
+}
+
+#main-box-heading img {
+    width: 400px;
+}
+
+#main-box-heading time {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+#main-box-description {
+    padding: 0 15px 25px;
+}
+
+#main-box-description h6, h2 {
+    font-weight: bolder;
+}
+
+#main-box-description h2 {
+    font-size: 55px;
+    padding: 5px 0 20px;
+}
+
+#main-box-description h6 {
+    font-size: 14px;
+}
+
+#main-box-description p {
+    color: rgb(182, 182, 182);
+    font-size: 13px;
+    padding-left: 3px;
+}
+
 #main-boxes-secondary-container a {
     text-decoration: none;
     color: white;
@@ -142,6 +212,21 @@ footer {
     background-size: 100% 100%;
 }
 
+.second-boxes-description h3, p {
+    padding: 0 15px 15px;
+}
+
+
+.second-boxes-description h3 {
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.second-boxes-description p {
+    color: rgb(173, 173, 173);
+    font-size: 12px;
+}
+
 .red-gradient {
     background-image: linear-gradient(170deg, rgba(255, 0, 0, 0.753), rgba(255, 0, 0, 0.486), rgba(255, 0, 0, 0.089), rgba(255, 0, 0, 0));
     width: 100%;
@@ -150,6 +235,7 @@ footer {
 }
 
 .black-gradient {
+    position: relative;
     background-image: linear-gradient(0deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.863), rgba(0, 0, 0, 0.479), rgba(0, 0, 0, 0));
     width: 100%;
     height: 100%;
@@ -438,6 +524,17 @@ footer {
     justify-content: space-between;
 }
 
+.align-bottom {
+    position: absolute;
+    bottom: 0;
+}
+
+.expand-down {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
 @media (max-width: 1100px) {
     #main-boxes {
         height: 325px;
@@ -447,9 +544,35 @@ footer {
         background-size: cover;
     }
 
+    #main-box-heading {
+        position: absolute !important;
+        top: -9999px !important;
+        left: -9999px !important;
+    }
+    
+    #main-box-description {
+        position: absolute;
+        bottom: 0;
+    }
+
+    #main-box-description h2 {
+        font-size: 45px;
+    }
+    
+    #main-box-description h6 {
+        font-size: 14px;
+        font-weight: normal;
+    }
+
+    .second-boxes-description h3 {
+        font-size: 20px;
+    }
+
     .red-gradient {
-        width: 0%;
-        height: 0%;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(0deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
     }
 
     .news-box {
@@ -490,11 +613,26 @@ footer {
     #main-boxes {
         flex-direction: column;
         height: 500px;
+        margin-top: 140px;
+        width: 100%;
+    }
+
+    #main-box-description {
+        padding: 0 15px 5px;
     }
 
     #main-boxes-main {
         height: 33%;
         width: 100%;
+    }
+
+    #main-box-description h2 {
+        font-size: 20px;
+        padding-bottom: 10px;
+    }
+    
+    #main-box-description h6 {
+        font-size: 12px;
     }
 
     #main-boxes-secondary-container {
@@ -565,4 +703,19 @@ footer {
     .index-funding-heading h5 {
         margin-left: 6em;
     }
+
+    #nav-inner-container ul {
+        position: absolute !important;
+        top: -9999px !important;
+        left: -9999px !important;
+    }
+
+    .fa-bars {
+        position: relative;
+        top: 0;
+        left: 0;
+        padding: 18px;
+        border-left: 1px solid rgb(202, 202, 202);
+    }
+
 }
