--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,7 @@ footer {
     text-decoration: none;
 }
 
+
 .index-funding-description {
     background-color: rgb(255, 252, 250);
     padding: 15px 15px 20px;
@@ -404,23 +405,26 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    position: relative;
 }
 
 .category-box {
-    border-bottom: 1px solid black; /* placeholder */
     width: 33%;
-    height: 700px; /* placeholder */
     position: relative;
     padding: 0 10px;
+    margin-bottom: 30px;
+}
+
+.category-box h3 {
+    padding-left: 0;
 }
 
 .category-box * {
     position: relative;
 }
 
-.category-box-link {
-    width: 100%;
-    height: 185px;
+.category-link {
+    height: 100%;
 }
 
 #category-one,
@@ -435,7 +439,6 @@ footer {
     height: 250px;
     width: 95%;
     background-size: 100% 100%;
-    position: absolute;
 }
 
 #category-one {
@@ -443,39 +446,47 @@ footer {
 }
 
 #category-two {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate2.webp");
 }
 
 #category-three {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate3.webp");
 }
 
 #category-four {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate4.jpg");
 }
 
 #category-five {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate5.webp");
 }
 
 #category-six {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate6.webp");
 }
 
 #category-seven {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate7.webp");
 }
 
 #category-eight {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate8.jpg");
 }
 
 #category-nine {
-    background-image: url("assets/Wallstreetbets-hed-368x276.jpg");
+    background-image: url("assets/cate9.jpg");
+}
+
+.category-box-heading h4 {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 5px;
 }
 
 .category-box-heading h5 {
     color: white;
+    font-size: 13px;
 }
 
 .category-box-heading a {
@@ -488,12 +499,55 @@ footer {
     color: gray;
 }
 
+.category-box-heading p {
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
 .category-latest-container {
     display: flex;
+    justify-content: space-between;
+    width: 95%;
+    padding-left: 15px;
+    background-color: rgb(255, 237, 227);
+    color: rgb(247, 82, 41);
 }
 
 .category-latest-image-link {
     height: 100%;
+}
+
+.category-latest-container h6 {
+    font-size: 13px;
+    padding-top: 15px;
+}
+
+.category-latest-container p {
+    font-size: 15px;
+    padding-top: 3px;
+    font-weight: bold;
+}
+
+.category-heading {
+    color: white;
+    padding: 0 10px;
+    line-height: 23px;
+}
+
+.category-heading h5 {
+    font-size: 13px;
+}
+
+.category-heading h4 {
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.category-heading p {
+    font-size: 12px;
+    padding: 10px 0;
+    color: rgb(173, 173, 173);
 }
 
 #category-latest-image1,
@@ -505,10 +559,11 @@ footer {
 #category-latest-image7,
 #category-latest-image8,
 #category-latest-image9 {
-    width: 150px;
+    min-width: 100px;
     height: 100px;
     background-size: cover;
     background-position: center;
+    margin-left: 5px;
 }
 
 #category-latest-image1 {
@@ -516,67 +571,85 @@ footer {
 }
 
 #category-latest-image2 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/03/Snag_98386df.png");
 }
 
 #category-latest-image3 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/03/Studio-Monitors-2.jpg");
 }
 
 #category-latest-image4 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/03/1-copy-9.jpg");
 }
 
 #category-latest-image5 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/09/Untitled-design-13.jpg");
 }
 
 #category-latest-image6 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/10/google-logo-podium.png");
 }
 
 #category-latest-image7 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/02/autonomous-driving-teacher-waymo-tesla-feature-level-self-driving.jpg");
 }
 
 #category-latest-image8 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/02/gocycle-g4-bike-ebike-fodler-future-electric-bike.jpg");
 }
 
 #category-latest-image9 {
-    background-image: url("assets/sq-online-store-phone-e1614664052360.jpg");
+    background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2021/03/117.jpeg");
 }
 
 .category-latest {
-    background-color: rgb(255, 171, 123);
-    color: rgb(196, 78, 0);
+    color: rgb(226, 58, 17);
+    padding: 15px 5px 0;
+    font-size: 13px;
+}
+
+.category-latest p {
+    padding: 3px;
 }
 
 .category-latest a {
-    color: rgb(196, 78, 0);
+    color: rgb(255, 51, 0);
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
+    font-size: 14px;
 }
 
 .category-latest-list-container {
     padding-left: 17px;
 }
 
+.category-latest-list-container ul {
+    padding-top: 5px;
+    width: 99%;
+}
+
 .category-latest-list-container ul hr {
-    width: 20em;
+    width: 100%;
     position: relative;
     right: 1em;
     border: 0px;
-    border-top: 1px solid rgb(207, 207, 207);
+    border-top: 1px solid rgb(224, 224, 224);
 }
 
 .category-latest-list-container li {
     list-style: square;
+    padding: 7px 0;
 }
 
 .category-latest-list-container a {
     text-decoration: none;
-    color: black;
+    color: rgb(128, 128, 128);
+    font-size: 14px;
+}
+
+.category-latest-list-container a:hover {
+    color: rgb(37, 37, 37);
+    font-weight: bold;
 }
 
 #deals-container {
@@ -587,9 +660,30 @@ footer {
 }
 
 .deals-box {
-    border-bottom: 1px solid black; /* placeholder */
     width: 25%;
     padding: 0 10px;
+    margin-bottom: 30px;
+}
+
+.deals-box a {
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+}
+
+.deals-box p {
+    margin-top: 10px;
+}
+
+.deals-box p del {
+    font-size: 13px;
+    color: rgb(172, 172, 172);
+}
+
+.deals-box p ins {
+    font-size: 16px;
+    text-decoration: none;
+    color: rgb(63, 63, 63);
 }
 
 .deals-box img {
@@ -599,6 +693,11 @@ footer {
 #deals-heading {
     display: flex;
     justify-content: space-between;
+}
+
+#deals-heading a {
+    color: rgb(238, 68, 16);
+    text-decoration: none;
 }
 
 .align-bottom {
@@ -617,6 +716,11 @@ footer {
     font-weight: bolder;
     font-size: 26px;
     padding: 0 0 25px 10px;
+}
+
+.article-heading a {
+    color: rgb(238, 68, 16);
+    text-decoration: none;
 }
 
 @media (max-width: 1100px) {
