--- a/styles.css
+++ b/styles.css
@@ -723,6 +723,43 @@ footer {
     text-decoration: none;
 }
 
+#footer-nav-container li {
+    float: left;
+}
+
+#footer-nav-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    align-items: center;
+}
+
+#footer-icons a {
+    text-decoration: none;
+    color: white;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 0px 10px 20px;
+    border: 1px solid rgb(59, 59, 59);
+    background-color: rgb(59, 59, 59);
+}
+
+#footer-links a {
+    text-decoration: none;
+    color: rgb(209, 209, 209);
+    font-size: 12px;
+    margin: 0 5px;
+}
+
+#footer-copyright {
+    color: rgb(209, 209, 209);
+    font-size: 12px;
+    padding-top: 60px;
+    text-align: center;
+    margin: 0 auto;
+    width: 50%;
+}
+
 @media (max-width: 1100px) {
     #main-boxes {
         height: 325px;
@@ -936,6 +973,20 @@ footer {
 
     #index-nav-list {
         margin-bottom: 10px;
+    }
+
+    .deals-box-heading {
+        padding-left: 10px;
+    }
+
+    #footer-icons {
+        padding: 5px;
+    }
+
+    #footer-copyright {
+        width: 100%;
+        background-color: black;
+        padding-bottom: 80px;
     }
 
 }
